--- a/SadAgregator/View/cells/ZakazCell/Cells/Comment cell/ZakazTableViewCellCommentTableViewCell.xib
+++ b/SadAgregator/View/cells/ZakazCell/Cells/Comment cell/ZakazTableViewCellCommentTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="ZakazTableViewCellCommentTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="121"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="161" id="KGk-i7-Jjw" customClass="ZakazTableViewCellCommentTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="121"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URc-V2-ZY4">
-                        <rect key="frame" x="16" y="11" width="288" height="99"/>
+                        <rect key="frame" x="16" y="11" width="288" height="139"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubble.left" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="OBB-Qs-XHi">
                                 <rect key="frame" x="8" y="8.5" width="30" height="21.5"/>
@@ -35,8 +35,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQY-hL-Gah">
-                                <rect key="frame" x="8" y="32" width="272" height="59"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQY-hL-Gah">
+                                <rect key="frame" x="8" y="32" width="272" height="99"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="29" id="g5H-R5-Wg7"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -53,6 +56,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="bQY-hL-Gah" secondAttribute="trailing" id="i5k-0n-8c6"/>
                             <constraint firstItem="zKb-GY-iK4" firstAttribute="centerY" secondItem="OBB-Qs-XHi" secondAttribute="centerY" id="pgi-fL-ggQ"/>
                             <constraint firstItem="OBB-Qs-XHi" firstAttribute="top" secondItem="URc-V2-ZY4" secondAttribute="top" constant="8" id="u2R-Ms-Fh2"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="67" id="zZM-Lh-jBt"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -70,7 +74,7 @@
                 <outlet property="commentLabel" destination="zKb-GY-iK4" id="xo8-Aw-GPF"/>
                 <outlet property="commentTextView" destination="bQY-hL-Gah" id="X9a-xj-xPZ"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="178.45982142857142"/>
+            <point key="canvasLocation" x="137.68115942028987" y="191.85267857142856"/>
         </tableViewCell>
     </objects>
     <resources>
